Suport for Digital Object Components
- add support for digital object components
- align all types with same resolve and display logic
- update css & js to support above

--- a/config.yml
+++ b/config.yml
@@ -12,3 +12,6 @@ parents:
   digital_object:
     name: custom_restriction
     cardinality: zero_to_one
+  digital_object_component:
+    name: custom_restriction
+    cardinality: zero_to_one
